2018-03-15  Dirk Eddelbuettel  <edd@debian.org>

	* src/init.c: Added R_init_* registration

	* man/RcppDate.Rd: Update to https URL
	* man/RcppExample.Rd: Idem
	* man/RcppParams.Rd: Idem
	* inst/NEWS.Rd: Idem

2014-01-25  Dirk Eddelbuettel  <edd@debian.org>

	* DESCRIPTION: Version 0.1.2

	* DESCRIPTION: Switch Depends: to Imports: for Rcpp, RcppClassic
	* NAMESPACE: Add import() for Rcpp, RcppClassic

2012-12-30  Dirk Eddelbuettel  <edd@debian.org>

	* DESCRIPTION: Version 0.1.1

	* DESCRIPTION: Added versioned Depends: on current Rcpp, RcpClassic
	and R as this package cannot be built under older versions.

	* inst/NEWS.Rd: Added

2010-12-27  Dirk Eddelbuettel  <edd@debian.org>

	* DESCRIPTION: Version 0.1.0 --- new package, split off RcppExamples
	0.1.4 which now covers the Rcpp API only

	* man/*: Updated to stress that this API is deprecated, added links
	to Rcpp documentation
