@@ -1,11 +1,20 @@
 2018-03-15  Dirk Eddelbuettel  <edd@debian.org>
 
-	* src/init.c: Added R_init_* registration
+	* NAMESPACE: registered S3 method
 
 	* man/RcppDate.Rd: Update to https URL
 	* man/RcppExample.Rd: Idem
 	* man/RcppParams.Rd: Idem
 	* inst/NEWS.Rd: Idem
+
+	* src/init.c: Added R_init_* registration
+
+	* R/RcppDateExample.R: Updated .Call thanks to registration
+	* R/RcppExample.R: Idem
+	* R/RcppMatrixExample.R: Idem
+	* R/RcppParamsExample.R: Idem
+	* R/RcppStringVectorExample.R: Idem
+	* R/RcppVectorExample.R: Idem
 
 2014-01-25  Dirk Eddelbuettel  <edd@debian.org>
 
